--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,6 +22,16 @@ textarea {
   resize: vertical;
 }
 
+ul
+{
+    list-style-type: none;
+    font-size: 12px;
+    li {
+      display: inline;
+      padding-bottom: 5px;
+    }
+}
+
 .center {
   text-align: center;
   h1 {
