--- a/app/views/games/_board_form.html.erb
+++ b/app/views/games/_board_form.html.erb
@@ -2,9 +2,15 @@
 <!-- gets the variables from the locals hash -->
 <!-- gets @game from /show, it wouldn't otherwise -->
 <!--  have access to the instance variable -->
-<%= form_for(game) do |g| %>
-  <%= g.hidden_field :row, :value => row %>
-  <%= g.hidden_field :column, :value => column %>
-<!-- send the form to /show -->       
-  <%= g.submit "#{row}, #{column}", class: "big-btn btn btn-large btn-primary" %>
+<%= form_for(game) do |gf| %>
+  <%= gf.hidden_field :row, :value => row %>
+  <%= gf.hidden_field :column, :value => column %>
+  <% if game.board[row][column] == "x" || game.board[row][column] == "o" %>
+<!-- send the form to /show -->  
+  	<span> <%="#{game.board[row][column]}" %> </span>
+  <% elsif game.winner? %>
+  	<%= gf.label " ", class: "big-btn btn btn-large btn-success disabled" %>
+  <% else %>
+  	<%= gf.submit " ", class: "big-btn btn btn-large btn-success" %>
+  <% end %>
 <% end %>
